feat admin set up in frontend and little bit in backend

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -13,6 +13,6 @@
             "@/*": ["./resources/js/*"]
         }
     },
-    "include": ["resources/js/**/*"],
+    "include": ["resources/js/**/*", "../Frontend/src/components/ui"],
     "exclude": ["node_modules"]
 }
